tests/invalid/parameter_pack_instantiate_predicate_not_allowed.wio
use std::traits as traits;

@Native
@CppHeader("native_pack_ops.h")
@CppName(native_pack::CountTypes)
@Instantiate(traits::IsInteger<Args>)
fn InvalidPackInstantiate<Args...>(args: Args...) -> i32;
